minor changes to correct spelling, remove redundancy and address warnings